--- a/ss10_Aop/BookManager/BookManager/src/main/resources/templates/book/list.html
+++ b/ss10_Aop/BookManager/BookManager/src/main/resources/templates/book/list.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <h1>Book list Page</h1>
+
+  <h2>
+      <span>Cookie-Views: </span>
+      <span th:text="${views.value}"></span>
+  </h2>
 <p th:text="${message}"></p>
     <table>
         <tr>
