update cart service

--- a/ss11_session_cookie/exercise/shop/src/main/resources/templates/product/list.html
+++ b/ss11_session_cookie/exercise/shop/src/main/resources/templates/product/list.html
@@ -35,5 +35,9 @@
         </td>
     </tr>
 </table>
+<div th:if="${ad}">
+    <p>AD info</p>
+    <span th:text="${ad.name}"></span>
+</div>
 </body>
 </html>
