update giao dien dep ss10 module 4

--- a/ss11_session_cookie/exercise/shop/src/main/resources/templates/product/detail.html
+++ b/ss11_session_cookie/exercise/shop/src/main/resources/templates/product/detail.html
@@ -15,9 +15,9 @@
           <th>price</th>
       </tr>
       <tr>
-          <td th:text="${product.name}"></td>
-          <td th:text="${product.description}"></td>
-          <td th:text="${product.price}"></td>
+          <td th:text="${productDto.name}"></td>
+          <td th:text="${productDto.description}"></td>
+          <td th:text="${productDto.price}"></td>
       </tr>
   </table>
 </body>
