--- a/ss11_session_cookie/exercise/shop/src/main/resources/templates/product/list.html
+++ b/ss11_session_cookie/exercise/shop/src/main/resources/templates/product/list.html
@@ -3,41 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Product</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <style>
-        table, td, th{
+        table, td, th {
             border: 1px solid black;
         }
+
         table {
             border-collapse: collapse;
+        }
+        .product-list{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .card-link{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .card-link a {
+            width: 48%;
         }
     </style>
 </head>
 <body>
-        <h1>Product</h1>
+<div class="container">
+    <div class="row">
+        <h1>Product List</h1>
+    </div>
+    <div class="row">
+        <div class="col-lg-9">
+            <div class="product-list">
+                <div class="col-lg-4 p-2" th:each="product : ${productDtoList}">
+                   <div class="card">
+                       <img th:src="@{${product.image}}" class="card-img-top" alt="...">
+                       <div class="card-body">
+                           <h5 class="card-title" th:text="${product.name}"></h5>
+                           <p class="card-text text-danger h5" th:text="${#numbers.formatDecimal(product.price, 0, 'COMMA', 0, 'POINT')}"></p>
+                           <div class="card-link">
+                               <a class="btn btn-primary btn-sm" th:href="@{/product/detail/{id}(id=${product.id})}" th:text="${'Detail'}"></a>
+                               <a class="btn btn-warning btn-sm" th:href="@{/cart/add/{id}(id=${product.id})}">Add to cart</a>
+                           </div>
+                       </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <a th:href="@{/product}" th:if="${ad}" style="text-decoration: none">
+                <h3 class="text-center">AD info</h3>
+                <div class="card" style="border: none">
+                    <img th:src="@{${ad.image}}" class="card-img-top" alt="...">
+                    <div class="card-body d-flex justify-content-evenly">
+                        <h5 class="card-title" th:text="${ad.name}"></h5>
+                        <p class="card-text text-danger h5" th:text="${#numbers.formatDecimal(ad.price, 0, 'COMMA', 0, 'POINT')}"></p>
+                    </div>
+                </div>
+            </a>
+        </div>
 
-<table>
-    <tr>
-        <th>STT</th>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Price</th>
-        <th>Add to cart</th>
-    </tr>
-    <tr th:each="product, state : ${productList}">
-        <td th:text="${state.count}"></td>
-        <td>
-            <a th:href="@{/product/detail/{id}(id=${product.id})}" th:text="${product.name}"></a>
-        </td>
-        <td th:text="${product.description}"></td>
-        <td th:text="${product.price}"></td>
-        <td>
-            <a th:href="@{/cart/add/{id}(id=${product.id})}">Add to cart</a>
-        </td>
-    </tr>
-</table>
-<div th:if="${ad}">
-    <p>AD info</p>
-    <span th:text="${ad.name}"></span>
+    </div>
+
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
