--- a/CaseStudyModule4/src/main/resources/templates/customer/list.html
+++ b/CaseStudyModule4/src/main/resources/templates/customer/list.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Customer | Trang chu</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+
 </head>
-<body>
+<body class="container">
 <h1>Customer page</h1>
 <a th:href="@{/customers/create}">add new customer</a>
 <p th:text="${message}"></p>
@@ -22,8 +24,8 @@
         <input type="submit" value="search">
     </form>
 </div>
-<table>
-    <tr>
+<table class="table table-striped">
+    <tr class="table-active">
         <th>STT</th>
         <th>Name</th>
         <th>Birth</th>
@@ -31,19 +33,35 @@
         <th>Email</th>
         <th>Phone number</th>
         <th>Address</th>
+        <th>Customer type</th>
         <th>Action</th>
     </tr>
     <tr th:each="customer, state : ${customerList}">
         <td th:text="${state.count}"></td>
         <td th:text="${customer.name}"></td>
         <td th:text="${customer.dayOfBirth}"></td>
-        <td th:text="${customer.gender}"></td>
+        <td>
+            <span th:if="${customer.gender == 0}">Male</span>
+            <span th:if="${customer.gender == 1}">FeMale</span>
+            <span th:if="${customer.gender == 2}">LGBT</span>
+        </td>
         <td th:text="${customer.email}"></td>
         <td th:text="${customer.phoneNumber}"></td>
         <td th:text="${customer.address}"></td>
+        <td th:text="${customer.customerType.name}"></td>
         <td>
-            <a th:href="@{/customers/delete/{id}(id=${customer.id})}">Delete</a>
-            <a th:href="@{/customers/edit/{id}(id=${customer.id})}">Edit</a>
+            <button th:attr="onclick=|deleteCustomer('${customer.id}', '${customer.name}')|"  type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                remove
+            </button>
+            <button th:attr="onclick=|editCustomer('${customer.id}',
+             '${customer.name}', '${customer.dayOfBirth}', '${customer.gender}',
+              '${customer.email}', '${customer.phoneNumber}', '${customer.address}',
+               '${customer.idCard}', '${customer.customerType.id}')|"
+                    type="button" class="btn btn-warning btn-sm"
+                    data-bs-toggle="modal"
+                    data-bs-target="#editModal">
+                Edit
+            </button>
         </td>
     </tr>
 </table>
@@ -54,5 +72,119 @@
     <span th:text="${customerList.totalPages}"></span>
     <a th:if="${customerList.hasNext()}" th:href="@{'/customers'(page= ${customerList.number + 1})}">Next</a>
 </div>
+<!-- Modal delete-->
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <form action="/customers/delete">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="deleteModalLabel">Delete Customer</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        <span>Delete, Are you sure!</span>
+                        <span id="name-delete" class="text-danger"></span>
+                    </p>
+                    <input type="text" id="id-delete" name="id" hidden>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-danger">delete</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!--END  Modal delete-->
+
+<!-- Modal Edit-->
+
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <form action="/customers/edit" th:object="${customerEmpty}">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="editModalLabel">Edit Customer</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label for="id" hidden>Id: </label>
+                    <input type="text" th:field="*{id}" placeholder="id" id="id" hidden> <br>
+
+                    <label for="name">Name: </label>
+                    <input type="text" th:field="*{name}" placeholder="name" id="name"> <br>
+
+                    <label for="dayOfBirth">Birth day: </label>
+                    <input type="date" th:field="*{dayOfBirth}" placeholder="dayOfBirth" id="dayOfBirth"> <br>
+
+                    <input type="radio" id="female" th:field="*{gender}" th:value="1">
+                    <label for="female">FeMale</label>
+
+                    <input type="radio" id="male" th:field="*{gender}" th:value="0">
+                    <label for="male">Male</label>
+
+                    <input type="radio" id="lgbt" th:field="*{gender}" th:value="2">
+                    <label for="lgbt">LGBT</label> <br>
+
+                    <label for="idCard">Id card: </label>
+                    <input type="text" th:field="*{idCard}" placeholder="idCard" id="idCard"> <br>
+
+                    <label for="phoneNumber">Phone Number: </label>
+                    <input type="text" th:field="*{phoneNumber}" placeholder="phoneNumber" id="phoneNumber"> <br>
+
+                    <label for="email">Email: </label>
+                    <input type="text" th:field="*{email}" placeholder="email" id="email"> <br>
+
+                    <label for="address">Address: </label>
+                    <input type="text" th:field="*{address}" placeholder="address" id="address"> <br>
+
+                    <label for="status" hidden>Is Remove: </label>
+                    <input type="text" th:field="*{status}" placeholder="status" id="status" hidden> <br>
+
+                    <label for="customerType">Customer type: </label>
+                    <select th:field="*{customerType}" id="customerType">
+                        <option th:each="customerType : ${customerTypeList}"
+                                th:text="${customerType.name}"
+                                th:value="${customerType.id}">
+                        </option>
+                    </select>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-warning">Save</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- End Modal Edit-->
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function deleteCustomer(idDelete, nameDelete) {
+        document.getElementById('id-delete').value = idDelete;
+        document.getElementById('name-delete').innerText = nameDelete;
+    }
+
+   function editCustomer(id, name, dayOfBirth, gender, email,
+    phoneNumber, address, idCard, customerType) {
+        document.getElementById("id").value = id;
+        document.getElementById("name").value = name;
+        document.getElementById("dayOfBirth").value = dayOfBirth;
+        document.getElementById("phoneNumber").value = phoneNumber;
+        document.getElementById("email").value = email;
+        document.getElementById("address").value = address;
+        document.getElementById("idCard").value = idCard;
+        document.getElementById("customerType").value = customerType;
+        let genderList = document.querySelectorAll("input[type='radio']");
+        genderList.forEach((e) => {
+            if (e.value == gender) {
+                e.checked = true;
+            }
+        });
+    }
+</script>
 </body>
 </html>
