--- a/ss7_spring_data_repository/exercise/Blog_Ex/src/main/resources/templates/blog/blog.html
+++ b/ss7_spring_data_repository/exercise/Blog_Ex/src/main/resources/templates/blog/blog.html
@@ -84,6 +84,8 @@
             </form>
         </div>
     </div>
+    <!--END  Modal delete-->
+
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
