--- a/CaseStudyModule4/src/main/resources/templates/customer/list.html
+++ b/CaseStudyModule4/src/main/resources/templates/customer/list.html
@@ -7,6 +7,8 @@
 
 </head>
 <body class="container">
+<header th:insert="layout/header.html :: header">
+</header>
 <h1>Customer page</h1>
 <a th:href="@{/customers/create}">add new customer</a>
 <p th:text="${message}"></p>
