up task 7 module 4 case study

--- a/CaseStudyModule4/src/main/resources/templates/customer/list.html
+++ b/CaseStudyModule4/src/main/resources/templates/customer/list.html
@@ -11,6 +11,7 @@
 </header>
 <h1>Customer page</h1>
 <a th:href="@{/customers/create}">add new customer</a>
+<a th:href="@{/customers/use}">Customer List Use</a>
 <p th:text="${message}"></p>
 
 <div>
